fixed some layout issues

--- a/style.css
+++ b/style.css
@@ -11,6 +11,55 @@ footer {
     transition: all 0.5s ease;
 }
 
+
+/* 
+input[type=checkbox]+label {
+    display: block;
+    margin: 0.2em;
+    cursor: pointer;
+    padding: 0.2em;
+}
+
+input[type=checkbox] {
+    display: none;
+}
+
+input[type=checkbox]+label:before {
+    content: "\2714";
+    border: 0.1em solid #000;
+    border-radius: 0.2em;
+    display: inline-block;
+    width: 1.5em;
+    height: 1.5em;
+    padding-left: 0.2em;
+    padding-bottom: 0.3em;
+    margin-right: 0.2em;
+    vertical-align: bottom;
+    color: transparent;
+    transition: .2s;
+}
+
+input[type=checkbox]+label:active:before {
+    transform: scale(0);
+}
+
+input[type=checkbox]:checked+label:before {
+    background-color: var(--green1);
+    border-color: var(--green1);
+    color: #fff;
+}
+
+input[type=checkbox]:disabled+label:before {
+    transform: scale(1);
+    border-color: #aaa;
+}
+
+input[type=checkbox]:checked:disabled+label:before {
+    transform: scale(1);
+    background-color: #bfb;
+    border-color: #bfb;
+} */
+
 header,
 footer {
     background-color: var(--dark-grey);
@@ -34,7 +83,7 @@ header .content {
 }
 
 header .content ul li a {
-    color: var(--green2);
+    color: var(--green1);
 }
 
 header #mobile_nav {
@@ -71,7 +120,7 @@ header #mobile_nav a {
     align-items: center;
     justify-content: center;
     width: 100%;
-    color: var(--green2);
+    color: var(--green1);
     height: 100%;
 }
 
@@ -122,7 +171,7 @@ main .input-box a {
     border-radius: 100px;
     align-items: center;
     justify-content: center;
-    background-color: var(--green2);
+    background-color: var(--green1);
     color: var(--light-text);
 }
 
@@ -140,7 +189,10 @@ main .para,
 main .heading1,
 main #contactDetails,
 main #contactForm {
-    transition: all 1.5s ease;
+    transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -webkit-transition: all 1s ease;
 }
 
 main #para11.inview,
@@ -219,7 +271,10 @@ main #contactForm.inview {
 }
 
 main #tableSection {
-    transition: all 1.5s ease;
+    transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -webkit-transition: all 1s ease;
     transform: rotate3d(-0.1, 1, 0, 90deg);
 }
 
@@ -236,9 +291,20 @@ footer .content {
     height: 100%;
 }
 
+
+/* @media screen and (max-width: 992px) {
+    main #cardsContainer {
+        background-image: url(assets/svg/m-lines.svg);
+        background-size: 90%;
+    }
+} */
+
 @media screen and (max-width: 800px) {
     main #cardsContainer {
         background-image: url(assets/svg/m-lines.svg);
         background-size: 90%;
+    }
+    header .content {
+        width: 80%;
     }
 }
